# plox-pyversion

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  DEVELOPMENT.md  LICENSE.txt  Makefile  README.md  VERSION  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: check-for-dnm-label.yml  detect-secrets.yml  ensure-version-changed.yml  python-validate.yml  validate-pr-title.yml
src/plox_git_testsupport/: __init__.py  git_test_project.py
src/plox_version/: cli.py  common.py
src/plox_version/test/: git_test_project.py  int_test_cli.py  test_common.py
test/: int_test_cli.py  test_common.py
