[tool.poetry]
name = "plox-version"
version = "0.0.0"
description = "A Python versioning utility for software projects in git repos."
authors = [ "mike <mike@codeplox.dev>",]
exclude = [ "**/test/*",]

[[tool.poetry.packages]]
include = "plox_version"
from = "src"

[[tool.poetry.packages]]
include = "plox_git_testsupport"
from = "src"

[[tool.poetry.include]]
path = "src"
format = "sdist"

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.dev-dependencies]
pyright = "*"
ruff = "*"
pytest = "*"
pylint = "*"
mypy = "*"


[tool.poetry.scripts]
plox-version = "plox_version.cli:plox_version"


[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
python_files = "*test*.py"
markers = [ "integration: marks tests that have external dependencies (deselect with \"-m 'not integration'\")",]
log_cli = true
log_cli_level = "DEBUG"
